- moreInfo image added to mobile. - White lines removed on mobile. - Footer corrected on mobile. - New Prod build.

--- a/src/style/descriptionPanel.scss
+++ b/src/style/descriptionPanel.scss
@@ -248,7 +248,7 @@
 	&__arrow {
 		width: 70px;
 		height: 30px;
-		margin: 0 auto;
+		margin: 20px auto;
 		display: block;
 		background: url('img/logos.png') -70px 63px / 530px;
 	}
