--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -27,6 +27,10 @@
 	
 	transition: all $time3 3s;
 	
+	@media (max-width: $breakpointMobile) {
+		display: none;
+	}
+	
 	&--in {
 		opacity: 0.7;
 	}
@@ -264,7 +268,7 @@
 	width: 100%;
 	margin: 0 auto 20px;
 
-	font-size: 3vh;
+	font-size: 5vw;
 	font-family: 'Open Sans Condensed', sans-serif;
 	text-align: center;
 	text-transform: uppercase;
@@ -420,15 +424,18 @@
 	font-size: 3.5vw;
 	font-weight: bold;
 	text-align: center;
+	text-transform: uppercase;
 		
 	@media (min-width: $breakpointMobile) {
 		display: none;
 	}
 	
 	&__more-info, &__show-intro-again {
-		width: 45%;
+		width: 50%;
 		margin-top: 10px;
-		padding: 10px;
+		padding: 14px;
+		
+		display: inline-block;
 		
 		background: $gray5;
 		border-radius: 5px;
@@ -436,8 +443,6 @@
 		
 		color: $whiteD;
 		font-size: 0.9em;
-		font-weight: bold;
-		text-transform: uppercase;
 		
 		transition: all ease-out 0.2s;
 		
